--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url("background.jpeg");
+      background-image: ("background.jpeg");
       background-size: cover;
       background-position: center;
     }
@@ -39,7 +39,7 @@
   <div class="container">
     <section>
       <h1>Northern Nevada Construction Consulting and Services</h1>
-      <p>Your trusted partner in the construction industry, serving Reno and the surrounding areas. With extensive experience spanning many years, we offer a wide range of services to meet your construction needs.</p>
+      <p>Your trusted partner in the construction industry, serving Reno and the surrounding areas. With extensive experience spanning many years, I offer a wide range of services to meet your construction needs.</p>
     </section>
     
     <section>
@@ -50,13 +50,13 @@
         <li>Site analysis</li>
         <li>Construction oversight</li>
       </ul>
-      <p>From residential to commercial projects, we have the knowledge and expertise to deliver exceptional results. We are committed to providing comprehensive solutions tailored to your specific requirements.</p>
+      <p>From residential to commercial projects, I have the knowledge and expertise to deliver exceptional results. I am committed to providing comprehensive solutions tailored to your specific requirements.</p>
     </section>
     
     <section>
       <h2>Contact Us</h2>
-      <p>As a reputable company, we prioritize client satisfaction and strive for excellence in every project. However, due to our high standards and attention to detail, our availability is limited. We encourage you to <a href="mailto:nnconstructionsvcsconsulting@gmail.com">contact us</a> or call us at (623)261-1514 to discuss your project and explore how we can work together.</p>
-      <p>At Northern Nevada Construction Consulting and Services, we understand the importance of personalized service and effective communication. We value the opportunity to collaborate with you and transform your construction vision into a reality.</p>
+      <p>As a reputable company, I prioritize client satisfaction and strive for excellence in every project. However, due to our high standards and attention to detail, our availability is limited. I encourage you to <a href="mailto:nnconstructionsvcsconsulting@gmail.com">contact us</a> or call me at (623)261-1514 to discuss your project and explore how we can work together.</p>
+      <p>At Northern Nevada Construction Consulting and Services, I understand the importance of personalized service and effective communication. I value the opportunity to collaborate with you based on excellence and honesty.</p>
     </section>
   </div>
 </body>
