--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   </style>
 </head>
 <body>
+  <img src="background.jpg" alt="Construction Image">
   <div class="container">
     <section>
       <h1>Northern Nevada Construction Consulting and Services</h1>
