--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <title>Northern Nevada Construction Consulting and Services</title>
   <style>
     /* CSS Styling */
+    
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-image: ("background.jpeg");
+      background-image: url("background.jpeg");
       background-size: cover;
       background-position: center;
     }
@@ -33,6 +34,7 @@
     section {
       margin-bottom: 40px;
     }
+  
   </style>
 </head>
 <body>
