--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
   </style>
 </head>
 <body>
+  <center>
   <img src="background.jpg" alt="Construction Image">
+    <center>
   <div class="container">
     <section>
       <h1>Northern Nevada Construction Consulting and Services</h1>
