--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
   </style>
 </head>
 <body>
+  <div>
   <center>
   <img src="background.jpg" alt="Construction Image">
     <center>
+      </div>
   <div class="container">
     <section>
       <h1>Northern Nevada Construction Consulting and Services</h1>
